syntax = "proto3";

package proto;

option java_package = "com.ziyue.website.common.rpc";
option java_outer_classname = "RPCFileServer";


message AddFileRequest {

}

message AddFileRespose {

}

message DeleteFileRequest {

}

message DeleteFileResponse {

}

message GetFileRequest {

}

message GetFileResponse {

}
